# ERL_Stage_1_Framework_42

./: CMakeLists.txt  Camera_Module.md  CompilingErros.txt  Executive_Summary.md  High-Level Architecture.md  Lynsyn_error.txt  PhD ERL Clarification  README.md  README_AGGREGATION.md  SampleTestIntegrationCode_v17.cpp  Window for frame.md  cuda_kernel.cu  runtimelog.txt  test.yuv  trapezoidal_rule.md
Debug/: realtime_metrics_010.csv
LynsynDevice/: LynsynDevice.cpp  LynsynDevice.h  README.md  errors.text  main.cpp
Module/: ConfigManager.hpp  IModule.h  ModuleFactory.hpp  Modules.hpp  RuntimeControls.hpp  Scheduler.hpp
Stage_01/: README.md
Stage_01/Concretes/: AlgorithmConcreteKernels.cu  AlgorithmConcreteKernels.cuh  AlgorithmConcrete_new.h  ConstraintsConcrete.h  DataConcrete_new.h  LearningConcrete.h  LynsynMonitorConcrete_new.h  SdlDisplayConcrete_new.h  SoCConcrete_new.h  SystemMetricsAggregatorConcrete_v3_2.h  SystemProfilingConcrete.h  test_filter.cu
Stage_01/Config/: RawDataConfig.h  SystemCaptureConfig.h  reset_lynsyn_usb.sh
Stage_01/Includes/: PipelineFactory.h  lynsyn.c  lynsyn.h  lynsyn_wrapper.h
Stage_01/Interfaces/: IAlgorithm.h  IConstraints.h  IData.h  IDisplay.h  IDisplay_new.h  ILearning.h  ILynsynMonitor.h  IMetricPushable.h  IOptimization.h  IPerformance.h  IRawDataFormat.h  ISoC.h  ISystemMetricsAggregator.h  ISystemProfiling.h
Stage_01/Others/: LKof_defines.h  TegraStatsInfo.h  sdl_2.h  utils.h
Stage_01/SharedStructures/: AggregatorConfig.h  AlgorithmConfig.h  CameraConfig.h  DisplayConfig.h  FrameData.h  FrameGrayView.hpp  LKof_defines.h  LucasKanadeOpticalFlow.h  LynsynMonitorConfig.h  OpticalFlowConfig.h  PowerStats.h  SharedQueue.h  SoCConfig.h  SystemMetricsSnapshot.h  ThreadManager.h  ZeroCopyFrameData.h  allModulesStatcs.h  jetsonNanoInfo.h  sharedStructures.h
Taxonomy/: Class_ERL_Stage_1_Framework_03.mermaid  Class_ERL_Stage_1_Framework_04.mermaid  Class_ProducerConsumer.mermaid  Class_SharedQueue.mermaid  Control-Flow-ERL_Stage_1_Framework_03.mermaid  Control-Flow-ERL_Stage_1_Framework_04.mermaid  SdlDisplayConcrete.mermaid  SystemCaptureFactory.mermaid  SystemMetricsAggregator_UML.mermaid  Taxonomy_frameWork_39.mermaid  TrueZeroCopy.mermaid  dataframe.mermaid  main.mermaid  orchestrator_Class.mermaid  orchestrator_Factory.mermaid  systemProfilingFactory.mermaid
Taxonomy/MERMAIN_DIAGRAMS/: .$ERL_Flow_Diagram_01.drawio.bkp  ERL_Flow_Diagram_01.drawio  Flowchar.mermaid  Sequence_diagram.mermaid
